Print build log in github runner

--- a/.github/workflows/makepres.yml
+++ b/.github/workflows/makepres.yml
@@ -24,7 +24,7 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: nix build
-        run: nix build -o result
+        run: nix --print-build-logs build -o result
 
       - name: Copy results
         run: |
